hard-gists/504768e05fda49a6e3338e798ae1cddd/run.log
=== Docker Run Log for 504768e05fda49a6e3338e798ae1cddd ===
Started at: Mi 29. Okt 15:19:56 CET 2025

[2025-10-29 15:19:56] START: Running container for 504768e05fda49a6e3338e798ae1cddd
[2025-10-29 15:19:56] SUCCESS: Container 4450953e76689fc977e7c733e8ed93064fef323c9807bcabc7b6df2d91883c55 started for 504768e05fda49a6e3338e798ae1cddd
=== Container logs for 504768e05fda49a6e3338e798ae1cddd ===
  File "/snippet.py", line 129
    print ce
    ^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 504768e05fda49a6e3338e798ae1cddd ===
[2025-10-29 15:19:58] INFO: Container 4450953e76689fc977e7c733e8ed93064fef323c9807bcabc7b6df2d91883c55 has stopped
